--- a/formulario.css
+++ b/formulario.css
@@ -1,11 +1,11 @@
 *{
 background-color:#444 ;
 color: white;
-list-style: none;
-text-decoration: none;
- font-family: 'Anton', sans-serif;
-	 
-	}
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+font-family: 'Bebas Neue', cursive; 
+}
 
 .titulo{
 width: 100%;
